# example

./: example.sql  pyproject.toml
auth_example/: asgi.py  settings.py  urls.py  wsgi.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
tests/: test_auth_example.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
